# coding-interviews

./: .gitignore  README.md  RECORD.txt  find_m.py  pyutils
algorithms/: CMakeLists.txt
algorithms/back/03_01_DuplicationInArray/: 03_01_DuplicationInArray_std.cpp
algorithms/back/03_02_DuplicationInArrayNoEdit/: 03_02_DuplicationInArrayNoEdit_std.cpp
algorithms/back/04_FindInPartiallySortedMatrix/: 04_FindInPartiallySortedMatrix_std.cpp  CMakeLists.txt
algorithms/back/05_ReplaceSpaces/: 05_ReplaceSpaces_practise.cpp  05_ReplaceSpaces_practise_v2.cpp  CMakeLists.txt
algorithms/config/: errors.txt
algorithms/cpp/: cppUtils
algorithms/cpp/00_UtilsTest/: utils_test.cpp
algorithms/cpp/00_coder/: CMakeLists.txt  JZ54_50.cpp  JZ56_18.cpp  JZ58_28.cpp  JZ59_32.cpp  JZ61_37.cpp  JZ62_54.cpp  JZ63_41.cpp  JZ65_12.cpp  toc.txt
algorithms/cpp/00_utils_test/: CMakeLists.txt  myTreeNode_test.cpp  myVTKUtilsTest.cpp  test.cpp
algorithms/cpp/01_AssignmentOperator/: 01_AssignmentOperator_std.cpp  CMakeLists.txt
algorithms/cpp/03_01_DuplicationInArray/: 03_01_DuplicationInArray_coder.cpp  03_01_DuplicationInArray_practise.cpp  03_01_DuplicationInArray_practise_test.cpp  CMakeLists.txt
algorithms/cpp/03_02_DuplicationInArrayNoEdit/: 03_02_DuplicationInArrayNoEdit_std_debug.cpp  CMakeLists.txt
algorithms/cpp/04_FindInPartiallySortedMatrix/: 04_FindInPartiallySortedMatrix_practise.cpp  04_FindInPartiallySortedMatrix_std.cpp  CMakeLists.txt
algorithms/cpp/05_ReplaceSpaces/: 05_ReplaceSpaces_coder.cpp  05_ReplaceSpaces_practise_v3.cpp  05_ReplaceSpaces_std.cpp  05_ReplaceSpaces_std_debug.cpp  CMakeLists.txt  Solutions_05.cpp
algorithms/cpp/06_PrintListInReversedOrder/: 06_PrintListInReversedOrder_practise.cpp  06_PrintListInReversedOrder_std.cpp  CMakeLists.txt
algorithms/cpp/07_ConstructBinaryTree/: 07_ConstructBinaryTree_practise.cpp  07_ConstructBinaryTree_std.cpp  07_ConstructBinaryTree_std_debug.cpp  CMakeLists.txt
algorithms/cpp/08_NextNodeInBinaryTrees/: 08_NextNodeInBinaryTrees_coder.cpp  08_NextNodeInBinaryTrees_mafenwo.cpp  08_NextNodeInBinaryTrees_practise.cpp  08_NextNodeInBinaryTrees_practise_opt.cpp  08_NextNodeInBinaryTrees_practise_test_opt.cpp  08_NextNodeInBinaryTrees_std.cpp  CMakeLists.txt
algorithms/cpp/09_QueueWithTwoStacks/: 09_QueueWithTwoStacks_practise.cpp  09_QueueWithTwoStacks_std.cpp  CMakeLists.txt  ImplementStackusingQueues01.cpp  ImplementStackusingQueues02.cpp  Queue.h
algorithms/cpp/10_Fibonacci/: 10_Fibonacci_practise.cpp  10_Fibonacci_std.cpp  CMakeLists.txt
algorithms/cpp/11_MinNumberInRotatedArray/: 11_MinNumberInRotatedArray_practise.cpp  11_MinNumberInRotatedArray_std.cpp  CMakeLists.txt
algorithms/cpp/12_StringPathInMatrix/: 12_StringPathInMatrix_practise.cpp  12_StringPathInMatrix_std.cpp  CMakeLists.txt
algorithms/cpp/13_RobotMove/: 13_RobotMove_practise.cpp  13_RobotMove_std.cpp  13_RobotMove_std_debug.cpp  CMakeLists.txt
algorithms/cpp/14_CuttingRope/: 14_CuttingRope_practise.cpp  14_CuttingRope_std.cpp  CMakeLists.txt
algorithms/cpp/15_NumberOf1InBinary/: 15_NumberOf1InBinary_practise.cpp  CMakeLists.txt
algorithms/cpp/16_Power/: 16_Power_practise.cpp  16_Power_std.cpp  CMakeLists.txt
algorithms/cpp/17_Print1ToMaxOfNDigits/: 17_Print1ToMaxOfNDigits_practise.cpp  17_Print1ToMaxOfNDigits_std.cpp  CMakeLists.txt
algorithms/cpp/18_01_DeleteNodeInList/: 18_01_DeleteNodeInList_std.cpp  CMakeLists.txt
algorithms/cpp/18_02_DeleteDuplicatedNode/: 18_02_DeleteDuplicatedNode_std.cpp  18_02_DeleteDuplicatedNode_std_debug.cpp  CMakeLists.txt
algorithms/cpp/19_RegularExpressionsMatching/: CMakeLists.txt
algorithms/cpp/20_NumericStrings/: CMakeLists.txt
algorithms/cpp/21_ReorderArray/: 21_ReorderArray_coder.cpp  21_ReorderArray_practise.cpp  CMakeLists.txt
algorithms/cpp/22_KthNodeFromEnd/: 22_KthNodeFromEnd_coder.cpp  22_KthNodeFromEnd_practise.cpp  22_KthNodeFromEnd_std.cpp  CMakeLists.txt
algorithms/cpp/23_EntryNodeInListLoop/: 23_EntryNodeInListLoop_std.cpp  CMakeLists.txt
algorithms/cpp/24_ReverseList/: 24_ReverseList_practise.cpp  24_ReverseList_std.cpp  CMakeLists.txt
algorithms/cpp/25_MergeSortedLists/: 25_MergeSortedLists_practise.cpp  CMakeLists.txt
algorithms/cpp/26_SubstructureInTree/: 26_SubstructureInTree_practise.cpp  26_SubstructureInTree_std.cpp  CMakeLists.txt
algorithms/cpp/27_MirrorOfBinaryTree/: 27_MirrorOfBinaryTree_coder.cpp  27_MirrorOfBinaryTree_practise.cpp  27_MirrorOfBinaryTree_std.cpp  CMakeLists.txt
algorithms/cpp/28_SymmetricalBinaryTree/: 28_SymmetricalBinaryTree_std.cpp  CMakeLists.txt
algorithms/cpp/29_PrintMatrix/: 29_PrintMatrix_practise.cpp  29_PrintMatrix_std.cpp  CMakeLists.txt
algorithms/cpp/30_MinInStack/: 30_MinInStack_practise.cpp  30_MinInStack_std.cpp  CMakeLists.txt  StackWithMin.h
algorithms/cpp/31_StackPushPopOrder/: 31_StackPushPopOrder_practise.cpp  31_StackPushPopOrder_std.cpp  CMakeLists.txt
algorithms/cpp/32_01_PrintTreeFromTopToBottom/: 32_01_PrintTreeFromTopToBottom_practise.cpp  32_01_PrintTreeFromTopToBottom_std.cpp  CMakeLists.txt
algorithms/cpp/32_02_PrintTreesInLines/: 32_02_PrintTreesInLines_std.cpp  CMakeLists.txt
algorithms/cpp/32_03_PrintTreesInZigzag/: 32_03_PrintTreesInZigzag_std.cpp  CMakeLists.txt
algorithms/cpp/33_SquenceOfBST/: 33_SquenceOfBST_practise.cpp  33_SquenceOfBST_practise_v2.cpp  33_SquenceOfBST_std.cpp  CMakeLists.txt
algorithms/cpp/34_PathInTree/: 34_PathInTree_practise.cpp  34_PathInTree_std.cpp  CMakeLists.txt
algorithms/cpp/35_CopyComplexList/: 35_CopyComplexList_practise.cpp  35_CopyComplexList_std.cpp  CMakeLists.txt  ComplexList.cpp
algorithms/cpp/36_ConvertBinarySearchTree/: 36_ConvertBinarySearchTree_practise.cpp  36_ConvertBinarySearchTree_std.cpp  CMakeLists.txt
algorithms/cpp/37_SerializeBinaryTrees/: 37_SerializeBinaryTrees_std.cpp  CMakeLists.txt
algorithms/cpp/38_StringPermutation/: 38_StringPermutation_practise.cpp  38_StringPermutation_practise_v1.cpp  38_StringPermutation_std.cpp  CMakeLists.txt
algorithms/cpp/39_MoreThanHalfNumber/: 39_MoreThanHalfNumber_practise.cpp  (+2 more)
(+241 files in other folders)
