cmake_minimum_required(VERSION 3.14)
project(coding-interviews)

set(CMAKE_CXX_STANDARD 11)

#add_subdirectory(cpp/00_UtilsTest)
#add_subdirectory(cpp/01_AssignmentOperator)
#add_subdirectory(cpp/03_01_DuplicationInArray)
#add_subdirectory(cpp/03_02_DuplicationInArrayNoEdit)
#add_subdirectory(cpp/04_FindInPartiallySortedMatrix)
#add_subdirectory(cpp/05_ReplaceSpaces)
#add_subdirectory(cpp/06_PrintListInReversedOrder)
#add_subdirectory(cpp/07_ConstructBinaryTree)
#add_subdirectory(cpp/08_NextNodeInBinaryTrees)
#add_subdirectory(cpp/09_QueueWithTwoStacks)
#add_subdirectory(cpp/10_Fibonacci)

#add_subdirectory(cpp/11_MinNumberInRotatedArray)
#add_subdirectory(cpp/12_StringPathInMatrix)
#add_subdirectory(cpp/13_RobotMove)
#add_subdirectory(cpp/14_CuttingRope)
#add_subdirectory(cpp/15_NumberOf1InBinary)
#add_subdirectory(cpp/16_Power)
#add_subdirectory(cpp/17_Print1ToMaxOfNDigits)
#add_subdirectory(cpp/18_01_DeleteNodeInList)
#add_subdirectory(cpp/18_02_DeleteDuplicatedNode)
#add_subdirectory(cpp/19_RegularExpressionsMatching)
#add_subdirectory(cpp/20_NumericStrings)

#add_subdirectory(cpp/21_ReorderArray)
#add_subdirectory(cpp/22_KthNodeFromEnd)
#add_subdirectory(cpp/23_EntryNodeInListLoop)
#add_subdirectory(cpp/24_ReverseList)
#add_subdirectory(cpp/25_MergeSortedLists)
#add_subdirectory(cpp/26_SubstructureInTree)
#add_subdirectory(cpp/27_MirrorOfBinaryTree)
#add_subdirectory(cpp/28_SymmetricalBinaryTree)
#add_subdirectory(cpp/29_PrintMatrix)
#add_subdirectory(cpp/30_MinInStack)

#add_subdirectory(cpp/31_StackPushPopOrder)
#add_subdirectory(cpp/32_01_PrintTreeFromTopToBottom)
#add_subdirectory(cpp/32_02_PrintTreesInLines)
#add_subdirectory(cpp/32_03_PrintTreesInZigzag)
#add_subdirectory(cpp/33_SquenceOfBST)
#add_subdirectory(cpp/34_PathInTree)
#add_subdirectory(cpp/35_CopyComplexList)
#add_subdirectory(cpp/36_ConvertBinarySearchTree)
#add_subdirectory(cpp/37_SerializeBinaryTrees)
#add_subdirectory(cpp/38_StringPermutation)
#add_subdirectory(cpp/39_MoreThanHalfNumber)
#add_subdirectory(cpp/40_KLeastNumbers)

#add_subdirectory(cpp/41_StreamMedian)
#add_subdirectory(cpp/42_GreatestSumOfSubarrays)
#add_subdirectory(cpp/43_NumberOf1)
#add_subdirectory(cpp/44_DigitsInSequence)
#add_subdirectory(cpp/45_SortArrayForMinNumber)
#add_subdirectory(cpp/46_TranslateNumbersToStrings)
#add_subdirectory(cpp/47_MaxValueOfGifts)
#add_subdirectory(cpp/48_LongestSubstringWithoutDup)
#add_subdirectory(cpp/49_UglyNumber)
#add_subdirectory(cpp/50_01_FirstNotRepeatingChar)
#add_subdirectory(cpp/50_02_FirstCharacterInStream)

add_subdirectory(cpp/51_InversePairs)
add_subdirectory(cpp/52_FirstCommonNodesInLists)
add_subdirectory(cpp/53_01_NumberOfK)
add_subdirectory(cpp/53_02_MissingNumber)
add_subdirectory(cpp/53_03_IntegerIdenticalToIndex)
add_subdirectory(cpp/54_KthNodeInBST)
add_subdirectory(cpp/55_01_TreeDepth)
add_subdirectory(cpp/55_02_BalancedBinaryTree)
add_subdirectory(cpp/56_01_NumbersAppearOnce)
add_subdirectory(cpp/56_02_NumberAppearingOnce)
add_subdirectory(cpp/57_01_TwoNumbersWithSum)
add_subdirectory(cpp/57_02_ContinuousSquenceWithSum)
add_subdirectory(cpp/58_01_ReverseWordsInSentence)
add_subdirectory(cpp/58_02_LeftRotateString)
add_subdirectory(cpp/59_01_MaxInSlidingWindow)
add_subdirectory(cpp/59_02_QueueWithMax)
add_subdirectory(cpp/60_DicesProbability)

#add_subdirectory(cpp/61_ContinousCards)
#add_subdirectory(cpp/62_LastNumberInCircle)
#add_subdirectory(cpp/63_MaximalProfit)
#add_subdirectory(cpp/64_Accumulate)
#add_subdirectory(cpp/65_AddTwoNumbers)
#add_subdirectory(cpp/66_ConstuctArray)
#add_subdirectory(cpp/67_StringToInt)
#add_subdirectory(cpp/68_CommonParentInTree)





