cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(01_AssignmentOperator_std 01_AssignmentOperator_std.cpp)
add_executable(01_AssignmentOperator_std_debug 01_AssignmentOperator_std_debug.cpp)
add_executable(01_AssignmentOperator_practise 01_AssignmentOperator_practise.cpp)
add_executable(Solutions01_Assig Solutions.cpp)
