cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(03_01_DuplicationInArray_std 03_01_DuplicationInArray_std.cpp)
add_executable(03_01_DuplicationInArray_std_debug 03_01_DuplicationInArray_std_debug.cpp)
add_executable(03_01_DuplicationInArray_practise 03_01_DuplicationInArray_practise.cpp)
add_executable(Solutions03_01_Du Solutions.cpp)
