cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(03_02_DuplicationInArrayNoEdit_std 03_02_DuplicationInArrayNoEdit_std.cpp)
add_executable(03_02_DuplicationInArrayNoEdit_std_debug 03_02_DuplicationInArrayNoEdit_std_debug.cpp)
add_executable(03_02_DuplicationInArrayNoEdit_practise 03_02_DuplicationInArrayNoEdit_practise.cpp)
add_executable(Solutions03_02_Du Solutions.cpp)
