cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(05_ReplaceSpaces_std 05_ReplaceSpaces_std.cpp)
add_executable(05_ReplaceSpaces_std_debug 05_ReplaceSpaces_std_debug.cpp)
add_executable(05_ReplaceSpaces_practise 05_ReplaceSpaces_practise.cpp)
add_executable(Solutions05_Repla Solutions.cpp)
