cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(07_ConstructBinaryTree_std 07_ConstructBinaryTree_std.cpp)
add_executable(07_ConstructBinaryTree_std_debug 07_ConstructBinaryTree_std_debug.cpp)
add_executable(07_ConstructBinaryTree_practise 07_ConstructBinaryTree_practise.cpp)
add_executable(Solutions07_Const Solutions.cpp)
