cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(13_RobotMove_std 13_RobotMove_std.cpp)
add_executable(13_RobotMove_std_debug 13_RobotMove_std_debug.cpp)
add_executable(13_RobotMove_practise 13_RobotMove_practise.cpp)
add_executable(Solutions13_Robot Solutions.cpp)
