cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(14_CuttingRope_std 14_CuttingRope_std.cpp)
add_executable(14_CuttingRope_std_debug 14_CuttingRope_std_debug.cpp)
add_executable(14_CuttingRope_practise 14_CuttingRope_practise.cpp)
add_executable(Solutions14_Cutti Solutions.cpp)
