cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(15_NumberOf1InBinary_std 15_NumberOf1InBinary_std.cpp)
add_executable(15_NumberOf1InBinary_std_debug 15_NumberOf1InBinary_std_debug.cpp)
add_executable(15_NumberOf1InBinary_practise 15_NumberOf1InBinary_practise.cpp)
add_executable(Solutions15_Numbe Solutions.cpp)
