cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(18_01_DeleteNodeInList_std 18_01_DeleteNodeInList_std.cpp)
add_executable(18_01_DeleteNodeInList_std_debug 18_01_DeleteNodeInList_std_debug.cpp)
add_executable(18_01_DeleteNodeInList_practise 18_01_DeleteNodeInList_practise.cpp)
add_executable(Solutions18_01_De Solutions.cpp)
