cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(19_RegularExpressionsMatching_std 19_RegularExpressionsMatching_std.cpp)
add_executable(19_RegularExpressionsMatching_std_debug 19_RegularExpressionsMatching_std_debug.cpp)
add_executable(19_RegularExpressionsMatching_practise 19_RegularExpressionsMatching_practise.cpp)
add_executable(Solutions19_Regul Solutions.cpp)
