cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(20_NumericStrings_std 20_NumericStrings_std.cpp)
add_executable(20_NumericStrings_std_debug 20_NumericStrings_std_debug.cpp)
add_executable(20_NumericStrings_practise 20_NumericStrings_practise.cpp)
add_executable(Solutions20_Numer Solutions.cpp)
