cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(21_ReorderArray_std 21_ReorderArray_std.cpp)
add_executable(21_ReorderArray_std_debug 21_ReorderArray_std_debug.cpp)
add_executable(21_ReorderArray_practise 21_ReorderArray_practise.cpp)
add_executable(Solutions21_Reord Solutions.cpp)
