cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(22_KthNodeFromEnd_std 22_KthNodeFromEnd_std.cpp)
add_executable(22_KthNodeFromEnd_std_debug 22_KthNodeFromEnd_std_debug.cpp)
add_executable(22_KthNodeFromEnd_practise 22_KthNodeFromEnd_practise.cpp)
add_executable(Solutions22_KthNo Solutions.cpp)
