cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(24_ReverseList_std 24_ReverseList_std.cpp)
add_executable(24_ReverseList_std_debug 24_ReverseList_std_debug.cpp)
add_executable(24_ReverseList_practise 24_ReverseList_practise.cpp)
add_executable(Solutions24_Rever Solutions.cpp)
