cmake_minimum_required(VERSION 3.14)
project(CXX)

set(CMAKE_CXX_STANDARD 14)

add_executable(27_MirrorOfBinaryTree_std 27_MirrorOfBinaryTree_std.cpp)
add_executable(27_MirrorOfBinaryTree_std_debug 27_MirrorOfBinaryTree_std_debug.cpp)
add_executable(27_MirrorOfBinaryTree_practise 27_MirrorOfBinaryTree_practise.cpp)
add_executable(Solutions27_Mirro Solutions.cpp)
